MainSite: Fixed CSS issues on smaller phones.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -77,7 +77,7 @@ a.btn:hover {
 .paralogo, .paraimg1, .paraimg2, .paraimg3 {
     position: relative;
     opacity: 1.0;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -103,6 +103,7 @@ a.btn:hover {
 .paraimg3 {
     background-image: url("/img/background-illidan-large.jpg");
     min-height: 100%;
+    background-position: left;
 }
 
 header {
@@ -146,13 +147,6 @@ header.guild-name-banner-sticky {
     letter-spacing: 6px;
 }
 
-@media screen and (max-width: 768px) {
-    .caption span.border {
-        font-size: 2.5vw;
-        letter-spacing: 4px
-    }
-}
-
 header span.border {
     color: #111;
     font-size: 25px;
@@ -170,6 +164,34 @@ header span.border {
     letter-spacing: 1px;
     font-size: 14px;
     height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .caption span.border {
+        font-size: 2.5vw;
+        letter-spacing: 4px;
+    }
+
+    header span.border {
+        font-size: 2.5vw;
+        letter-spacing: 4px;
+    }
+
+    .border-text {
+        letter-spacing: 0;
+    }
+
+    .border-nav {
+        letter-spacing: 0;
+    }
+
+    body, html {
+        font: 14px "Lato", sans-serif;
+    }
+
+    .videowrapper img {
+        width: 100%;
+    }
 }
 
 .blurb {
